--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "react-router-dom": "~4.3.1",
     "react-test-renderer": "^16.8.5",
     "reactstrap": "^7.1.0",
+    "redux": "^4.0.1",
+    "redux-promise": "^0.6.0",
     "simple-line-icons": "^2.4.1"
   },
   "devDependencies": {
