--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
-#REACT_APP_URL_API=http://localhost:8000/api/
-REACT_APP_URL_API=http://localhost:1337/
+REACT_APP_URL_API=http://localhost:8000/api/
+#REACT_APP_URL_API=http://localhost:1337/
